# machine_learning_concepts

./: .gitignore  pyproject.toml
explainable_ai/: cam_visualization.ipynb
facial-detection/notebooks/: face_detection_demo.ipynb
facial-detection/src/: __init__.py  dataset.py  model.py  trainer.py  utils.py
gpt/: README.md  config.py  dataset.py  gpt.py  test_model.py  transformer_elements.py
gpt/notebook/: test_env.ipynb
hyperopt/optuna/: Optuna-Basics.ipynb  ViT_notebook.ipynb
multimodal/: deployable_clip_options.md
multimodal/notebooks/: clip_demo.ipynb
multimodal/src/: __init__.py  image_text_matcher.py
