[tool.poetry]
name = "machine-learning-concepts"
version = "0.1.0"
description = "Demonstrations and notebooks of basic modern ML concepts"
authors = ["Komel Merchant"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
torch = ">=2.0"
numpy = ">=1.24,<2.0"
matplotlib = ">=3.7"
torchvision = ">=0.15"
jupyter = ">=1.0"
grad-cam = ">=1.5"

[project]
name = "machine-learning-concepts"
version = "0.1.0"
description = "Demonstrations and notebooks of basic modern ML concepts"
authors = [
    {name = "Komel Merchant"}
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24,<2.0",
    "matplotlib>=3.7",
    "torchvision>=0.15",
    "jupyter>=1.0",
    "grad-cam>=1.5",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
